assets/css/style.css
/* ... */
.testimonila-block strong {
    font-size: 2em;
}


/* ///////////////////////////////////////////////////////////////////// 
//  07 - Contact
/////////////////////////////////////////////////////////////////////*/


#contact {
    color: #fff;
}

.mapWrap {
    position: relative;
    /*min-height: 600px;*/
}
#googleMap {
    position: absolute !important;
    top: 0;
    left: 0;
    height: 100%;
}
#contact-area {
    background: rgba(0, 0, 0, 0.7);
    width: 100%;
    position: relative;
    padding: 80px 0px 60px 0px;
}

.moreDetails {
    color: #fff;
}
.con-title {
    font-weight: 300;
    font-size: 3em;
    margin: 0;
    padding-bottom: 30px;
}
.moreDetails p {
    font-size: 16px;
}
.address {
    list-style: none;
    margin: 0;
    padding: 10px 0px 0px 0px;
}
.address li {
    font-size: 1.1em;
    position: relative;
    margin-bottom: 3%;
}
.address li i {
    font-size: 20px;
    position: absolute;
    top: 1px;
}
.address li span {
    padding-bottom: 10px;
    position: relative;
    left: 30px;
}
.form-control {
    box-shadow: none;
    border: 1px solid #8E8E8E;
    border-radius: 0px;
    padding: 12px 12px;
    height: auto;
    background: rgba(255, 255, 255, 0.11);
}
.form-group input,.form-group textarea {
    color: #FFF;
}

/*Social media links*/

#social {
    background-color: rgba(0, 0, 0, 0.75) !important;
    padding: 30px 0px 30px 0px;
    position: relative;
}
.normal-txt {
    color: #fff;
    font-size: 3em;
    font-weight: 100;
    padding-bottom: 10px;
    border-bottom: 1px solid;
    max-width: 300px;
    margin: 0 auto;
    margin-bottom: 30px;
}
.scoialinks {
    list-style: none;
    text-align: center;
    padding: 0;
}
.social-icons {
    display: inline-block;
    padding: 0px 5px;
}
.social-icons a {
    display: block;
    width: 50px;
    height: 50px;
    background-size: 100% 200%;
    color:#000;
}

.social-icons a:hover {
    background-position: 0px -50px;
}
.facebook{
	background-image: url(../images/facebook.png);
}
.twitter{
	background-image: url(../images/twitter.png);
}
.google-plus{
	background-image: url(../images/google-plus.png);
}
.linkedin{
	background-image: url(../images/linkedin.png);
}
.wordpress{
	background-image: url(../images/wordpress.png);
}


/* ///////////////////////////////////////////////////////////////////// 
//  08 - Footer 
/////////////////////////////////////////////////////////////////////*/



footer {
    width: 100%;
    background: #000;
    color: #fff;
}
.copyright {
    margin: 0;
    padding: 20px 0px;
    text-align: left;
}
.designed {
    margin: 0;
    padding: 20px 0px;
    text-align: right;
}
.designed a:hover {
    color: #e66f69;
}



/* ///////////////////////////////////////////////////////////////////// 
//  09 - Responsive Fixes
/////////////////////////////////////////////////////////////////////*/



@media all and (min-width: 1400px) {
	.centered p {
		font-size: 3em;
	}
	.bigheadline {
		font-size: 15em;
	}
	.subheadline {
		font-size: 5em;
	}
}

@media all and (max-width: 1201px) and (min-width: 1399px) {
	.centered p {
		font-size: 3em;
	}
	.bigheadline {
		font-size: 15em;
	}
	.subheadline {
		font-size: 5em;
	}
}

@media all and (max-width: 1200px) and (min-width: 992px) {

	.services {
		max-width: 293px;
		height: 213px;
	}
	.service-wrap i {
	    font-size: 4em;
	    margin-top: 28px;
	}
	.service-wrap h3 {
	    font-size: 1.4em;
	}
	.service-wrap p {
	    font-size: 11px;
	    padding: 0px 35px;
	}
}

@media all and (max-width: 991px) and (min-width: 768px) {

	.services {
		max-width: 293px;
		height: 293px;
		margin: 0 auto;
		margin-bottom: 30px;
	}
	.service-wrap p {
		padding: 0px 40px;
		font-size: 14px;
	}
	.pe-dj {
		font-size: 6em;
	}

}

@media all and (max-width: 991px) {

	header{
		background: url(../images/bg-small.jpg) no-repeat;
		background-size: cover;
		background-attachment: fixed;
		background-position: 50% -50px;
	}
}

@media all and (max-width: 768px) {
	.services {
		max-width: 293px;
		height: 293px;
		margin: 0 auto;
		margin-bottom: 30px;
	}
	.pe-dj {
		font-size: 6em;
	}
	.service-wrap i {
		margin-top: 50px;
	}
	.centered p {
		font-size: 2em;
	}
	.bigheadline {
		font-size: 6em;
	}
	.subheadline {
		font-size: 2em;
	}
	.item-space figure {
	    max-width: 360px;
	    margin: 0 auto;
	}
	.moreDetails {
		margin-bottom: 60px;
	}
	.copyright, .designed {
		text-align: center;
	}
	.scrollDown {
	    top: 70%;
	    left: 46%;
	}
}
@media all and (max-width: 380px) {


	.logo-text {
	    font-size: 2em;
	}
	.centered p {
	    font-size: 1em;
	}
	.bigheadline {
	    font-size: 4em;
	}
	.subheadline {
	    font-family: 'Titillium Web',sans-serif;
	    font-size: 1.5em;
	    font-weight: 200;
	    margin: 0;
	}
	.testimonila-block p {
	    max-width: 90%;
	}
	.social-icons a {
	    width: 30px;
	    height: 30px;
	}
	
}

@media all and (max-width: 480px) {

	.scrollDown {
	    top: 70%;
	    left: 44%;
	}
}

